# rust-api-react

./: .gitignore
react-app/: .gitignore  package.json
react-app/src/: App.tsx  customer-form.tsx.wip
react-app/src/common/components/: common-form.tsx.wip  snackbars.tsx.wip
rust-warp-api/: .gitignore  Cargo.toml
rust-warp-api/data/: customers.json
rust-warp-api/src/: main.rs  routes.rs
