[package]
name = "rust-warp-api"
version = "0.1.0"
authors = ["andrewleverette <andrew.leverette@decisionsource.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["macros"] }
warp = "0.3"